--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^100.1.0",
+    "@react-navigation/bottom-tabs": "^7.3.9",
+    "@react-navigation/material-top-tabs": "^7.2.9",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
     "react": "19.0.0",
